[project]
name = "tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.3",
    "peft>=0.17.1",
    "scipy>=1.16.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
