[project]
name = "tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "flash-attn>=2.8.3",
    "huggingface-hub>=0.35.3",
    "mistral-common>=1.8.5",
    "peft>=0.17.1",
    "scipy>=1.16.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "mistral-common>=1.8.5",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
